# notebook

./: .gitignore  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  c.txt  d.txt  f.txt  g.txt
.github/workflows/: main_testappservice.yml
C++/: code1_2_1  code1_2_1.cpp  environment.md
Classic-Computer-Science-Problems-in-Python/: fibonacci.py  tempCodeRunnerFile.py
app-service/: README.md
aws/: README.md
azure/: container.ipynb
azure/app-service/: README.md  pyproject.toml
azure/azureml/: predictions (1).csv  predictions.csv
azure/azureml/inference/: scoring-script.py
azure/azureml/pipeline/: 2.ipynb  (+1 more)
graphql/: 01_Getting_srated.ipynb  Executing_a_query.ipynb  ObjectType.ipynb  SQLAlchemy.ipynb  Scalars.ipynb  Schema.ipynb  notebook.ipynb  sample.py
introduction-to-falsk/: pyproject.toml
introduction-to-falsk/apps/minimalapp/: app.py
introduction-to-falsk/apps/minimalapp/templates/: index.html
introduction-to-flask/: pyproject.toml
introduction-to-flask/apps/minimalapp/: app.py
introduction-to-flask/apps/minimalapp/templates/: contact.html  contact_complete.html  contact_mail.html  index.html
logger/: config.yml  main.py  mymodule.py  notebook.ipynb
logger/introduction/: main.py  mymodule.py
logger/use-yaml/: config.yml  main.py  mymodule.py
python/tests/: cart.py  product.py  test_cart.py  test_product.py
pytorch/: pyproject.toml
pytorch/pytorch-tutorial/: learn-the-basic.ipynb
pytorch/pytorch-tutorial/Quickstart/: 02_tensor.ipynb  quickstart.ipynb
software_design/: janken.py  janken_class.py  sanbaka.py  tempCodeRunnerFile.py
streamlit/: count.py  main.py  pyproject.toml  requirements.txt  test.ipynb
streamlit/LLM-App/: Chatbot.py
streamlit/stlite/: sample.html
streamlit/stlite/stlite-streamlit-app/: README.md
streamlit/stlite/stlite-streamlit-app/src/: index.html  streamlit_app.py
tensorflow/deep-learning-with-python/: 03_.ipynb  chapter02_mathematical-building-blocks.ipynb
tensorflow/tensorflow-serving/: fashon-mnist.ipynb
独習Python_サンプルコード/chap08/: scope_mutable.py  scope_nest.py
(+23 files in other folders)
