[tool.poetry]
name = "introduction-to-falsk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.7"
flask = "^3.1.0"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
python-dotenv = "^1.0.1"
email-validator = "^2.2.0"
flask-debugtoolbar = "^0.16.0"
flask-mail = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
