[tool.poetry]
name = "azure app service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.7"
flask = "2.2.2"
gunicorn = "^23.0.0"
werkzeug = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
